4-function usage example

--- a/sqlite/Makefile
+++ b/sqlite/Makefile
@@ -1,9 +1,13 @@
-all: simple
+OBJS=simple standard 
+all: $(OBJS)
 
 simple: simple.c
+	$(CC) -o $@ $< -lsqlite3
+
+standard: standard.c
 	$(CC) -o $@ $< -lsqlite3
 
 .PHONY: clean
 
 clean:
-	rm -f simple
+	rm -f $(OBJS)
