example of create table

--- a/sqlite/Makefile
+++ b/sqlite/Makefile
@@ -1,4 +1,4 @@
-OBJS=simple standard insert
+OBJS=simple standard insert create
 all: $(OBJS)
 
 simple: simple.c
@@ -8,6 +8,9 @@ standard: standard.c
 	$(CC) -o $@ $< -lsqlite3
 
 insert: insert.c
+	$(CC) -o $@ $< -lsqlite3
+
+create: create.c
 	$(CC) -o $@ $< -lsqlite3
 
 .PHONY: clean
