--- a/sqlite/Makefile
+++ b/sqlite/Makefile
@@ -1,10 +1,13 @@
-OBJS=simple standard insert create
+OBJS=simple standard insert create replace
 all: $(OBJS)
 
 simple: simple.c
 	$(CC) -o $@ $< -lsqlite3
 
 standard: standard.c
+	$(CC) -o $@ $< -lsqlite3
+
+replace: replace.c
 	$(CC) -o $@ $< -lsqlite3
 
 insert: insert.c
